--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Genel Stil Ayarları */
+/* Genel Stil Ayarlarıı */
 :root {
     --primary-color: #3498db; /* Mavi - Aksiyon Butonları, Linkler */
     --secondary-color: #2c3e50; /* Koyu Gri Mavi - Başlıklar, Footer */
